@@ -79,6 +79,7 @@
         err_action                                                      \
     }
 
+uintmax_t char_to_multiplier(const char c);
 unsigned int get_num_digits(double i);
 fsize_t get_size(char *file_path, struct stat *file_stat,
     struct program_options *options);
@@ -86,6 +87,7 @@ char *abs_path(const char *path);
 int str_push(char ***array, unsigned int *num, const char * const str);
 void str_cleanup(char ***array, unsigned int *num);
 int str_is_negative(const char * const str);
+uintmax_t str_to_uintmax(const char *str, const unsigned char handle_multiplier);
 int file_match(const char * const * const array, const unsigned int num,
     const FTSENT * const p, const unsigned char ignore_case);
 int valid_file(const FTSENT * const p, struct program_options *options,
